--- a/src/GMCopilot/GMCopilot.Backend/_Imports.razor
+++ b/src/GMCopilot/GMCopilot.Backend/_Imports.razor
@@ -7,8 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Blazorise
-@using Blazorise.LoadingIndicator
+@using MudBlazor
 @using GMCopilot.Backend
 @using GMCopilot.Backend.Shared
 @using GMCopilot.Services
