--- a/src/GMCopilot/GMCopilot.Backend/Shared/MainLayout.razor
+++ b/src/GMCopilot/GMCopilot.Backend/Shared/MainLayout.razor
@@ -15,16 +15,13 @@
 <MudLayout>
     <MudAppBar>
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        My Application
+        Game Master Copilot
+        <LoginDisplay />
     </MudAppBar>
     <MudDrawer @bind-Open="@_drawerOpen">
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
