--- a/src/GMCopilot/GMCopilot.Backend/Shared/MainLayout.razor
+++ b/src/GMCopilot/GMCopilot.Backend/Shared/MainLayout.razor
@@ -48,5 +48,6 @@
         await AccessService.InitializeUsingContext(context);
         Account = AccessService.Account;
         Tenant = AccessService.Tenant;
+        Console.WriteLine(Account.name);
     }
 }
