Fixed Mudblazor interactivity

--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/_Imports.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using GMCopilot.Client
+@using GMCopilot.Client.Components
 @using MudBlazor
