--- a/src/GMCopilot/GMCopilot/GMCopilot/Components/_Imports.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using GMCopilot
-@using GMCopilot.Client
 @using GMCopilot.Components
+@using GMCopilot.Client
+@using GMCopilot.Client.Components
 @using MudBlazor
