--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/Components/Layout/MainLayout.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/Components/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 @using GMCopilot.Client.Components.Account
 @using GMCopilot.Client.Components.Layout
