--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/Pages/Counter.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/Pages/Counter.razor
@@ -1,5 +1,6 @@
 ﻿@page "/counter"
-@rendermode InteractiveAuto
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <PageTitle>Counter</PageTitle>
 
