--- a/src/GMCopilot/GMCopilot/GMCopilot.Client/_Imports.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot.Client/_Imports.razor
@@ -1,11 +1,16 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Authorization;
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.JSInterop
 @using GMCopilot.Client
 @using GMCopilot.Client.Components
+@using GMCopilot.Client.Components.Layout
+@using GMCopilot.Client.Components.Account
 @using MudBlazor
