--- a/src/GMCopilot/GMCopilot/GMCopilot/Components/App.razor
+++ b/src/GMCopilot/GMCopilot/GMCopilot/Components/App.razor
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <MudThemeProvider />
@@ -19,10 +19,9 @@
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="@RenderMode.InteractiveAuto" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
-
