More work on Authorization

--- a/src/GMCopilot/GMCopilot/Layout/MainLayout.razor
+++ b/src/GMCopilot/GMCopilot/Layout/MainLayout.razor
@@ -8,7 +8,7 @@
         Game Master Copilot
         <AccountMenu />
     </MudAppBar>
-    <MudDrawer @bind-Open="@_navDrawerOpen">
+    <MudDrawer @bind-Open="@_navDrawerOpen" title="Open/Close Navigation Menu">
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
